--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18",
     "stripe": "^14.1.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
